force-app/main/default/objects/Activity/fields/LPCR_Abouti__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Abouti__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abouti</label>
    <type>Checkbox</type>
</CustomField>