force-app/main/default/objects/Activity/fields/LPCR_Compte_rendu__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Compte_rendu__c</fullName>
    <description>Champ reprenant le compte-rendu des activités</description>
    <label>Compte-rendu</label>
    <type>TextArea</type>
</CustomField>