force-app/main/default/objects/Activity/fields/LPCR_Echeance__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Echeance__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Echéance des activités</description>
    <label>Echéance</label>
    <type>DateTime</type>
</CustomField>