force-app/main/default/objects/Activity/fields/LPCR_IdExterne_Activite__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_Activite__c</fullName>
    <externalId>true</externalId>
    <label>ID externe</label>
    <length>180</length>
    <type>Text</type>
</CustomField>