force-app/main/default/objects/Activity/fields/LPCR_IdExterne_CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_CreatedBy__c</fullName>
    <label>Id Externe Created By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>