force-app/main/default/objects/Activity/fields/LPCR_IdExterne_LastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>LPCR_IdExterne_LastModifiedBy__c</fullName>
    <label>Id Externe Last Modified By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>