force-app/main/default/objects/Activity/fields/LPCR_PremierRendezVous__c.field-meta.xml
<CustomField>
    <fullName>LPCR_PremierRendezVous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premier RDV</label>
    <type>Checkbox</type>
</CustomField>