force-app/main/default/objects/Activity/fields/LPCR_SousTypeRdv__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SousTypeRdv__c</fullName>
    <label>Sous-type de RDV</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LPCR_TypeRdv__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Découverte</fullName>
            </value>
            <value>
                <fullName>Visite de Crèche</fullName>
            </value>
            <value>
                <fullName>Soutenance/Négociation</fullName>
            </value>
            <value>
                <fullName>Négociation</fullName>
            </value>
            <value>
                <fullName>Remise d&apos;Offre</fullName>
            </value>
            <value>
                <fullName>Suivi</fullName>
            </value>
            <value>
                <fullName>Atelier Parentalité</fullName>
            </value>
            <value>
                <fullName>Commission d&apos;attribution</fullName>
            </value>
            <value>
                <fullName>Immobilier</fullName>
            </value>
            <value>
                <fullName>Post-Mortem (perte client)</fullName>
            </value>
            <value>
                <fullName>RP (Evenements)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>