force-app/main/default/objects/Activity/fields/LPCR_SousTypeTache__c.field-meta.xml
<CustomField>
    <fullName>LPCR_SousTypeTache__c</fullName>
    <label>Sous-type de tâche</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LPCR_TypeTache__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADV</fullName>
            </value>
            <value>
                <fullName>Attribution</fullName>
            </value>
            <value>
                <fullName>BDC</fullName>
            </value>
            <value>
                <fullName>Contrat</fullName>
            </value>
            <value>
                <fullName>Préparation BDC/Contrat</fullName>
            </value>
            <value>
                <fullName>Proposition commerciale</fullName>
            </value>
            <value>
                <fullName>Prospection</fullName>
            </value>
            <value>
                <fullName>Relance</fullName>
            </value>
            <value>
                <fullName>Suivi</fullName>
            </value>
            <value>
                <fullName>Rappel Famille</fullName>
            </value>
            <value>
                <fullName>Rappel Campagne Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>