force-app/main/default/objects/Activity/fields/LPCR_Statut__c.field-meta.xml
<CustomField>
    <fullName>LPCR_Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tenu</fullName>
            </value>
            <value>
                <fullName>Annulé</fullName>
            </value>
            <value>
                <fullName>Planifié</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>