force-app/main/default/objects/Activity/fields/LPCR_TypeRdv__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeRdv__c</fullName>
    <label>Type de RDV</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RDV Téléphonique</fullName>
            </value>
            <value>
                <fullName>RDV Physique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>