force-app/main/default/objects/Activity/fields/LPCR_TypeTache__c.field-meta.xml
<CustomField>
    <fullName>LPCR_TypeTache__c</fullName>
    <label>Type de tâche</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appel</fullName>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Gestion interne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>