force-app/main/default/objects/Activity/fields/LPCR_WhoIdExternal__c.field-meta.xml
<CustomField>
    <fullName>LPCR_WhoIdExternal__c</fullName>
    <label>Id Externe</label>
    <length>20</length>
    <type>Text</type>
</CustomField>