force-app/main/default/objects/Activity/fields/TECH_IsOwner__c.field-meta.xml
<CustomField>
    <fullName>TECH_IsOwner__c</fullName>
    <formula>IF(OwnerId =  $User.Id, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Est propriétaire</label>
    <type>Checkbox</type>
</CustomField>